# -graphic-image-processing

./: CreateBoxes.py  GraficPlot.py  ImageFilters.py  LICENSE  README.md  csvCoords.py  imagefilters.py  mask.py  requirements.txt  setup.cfg  setup.py  xmlCoords.py
anexos/: filecsv.csv
src/: ImageFilters.py
src/GraficImageProcessig.egg-info/: PKG-INFO
