[metadata]
name=Grafic Imagem Processig
version=1.0.0
author=Francisco Jose, Mateus Assis
author_email=franciscojose17@ufpi.edu.br
description=Gip is a library that aims to simplify the functionality of other existing libraries for image processing.
long_description= File: README.md
long_description_content_type= text/markdown
url= https://github.com/KillerGlass/-graphic-image-processing.git

project_urls = 
    Bug Tracker = https://github.com/KillerGlass/-graphic-image-processing.git
classifiers =
    programming Languege :: Python :: 3
    License :: OS: Approved :: MIT License
    Operating System :: OS Indepedent

 


[options]
packages = find:
python_requires == 3.8
include_package_data= True
package_dir = 
    = src

install_requires=
    numpy== 1.19.2
    scikit-image== 0.17.2
    matplotlib==3.4.2
    imageio==2.9.0
    opencv-python==4.5.2.54
    argparse==1.4.0
    pycopy-xml.etree.ElementTree==0.2.1

[options.packages.find]
where = src
